Исправлены грамматические ошибки, которые выявил LanguageTool.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -306,7 +306,7 @@
 \begin{equation*}
     \vect{\nu} = BK(v, \alpha, \beta) \vect{u}
 \end{equation*}
-\noindent где $B \in \mathspace{R}^{n \times (m+p+q)}$ -- матрица геометрии ДРК, а $K(v, \alpha, \beta) \in \mathspace{R}^{n \times (m+p+q)}$ -- матрица матрица коэфициентов влияния набегающего потока, $v, \alpha, \beta$ -- соответственно, скорость набегающего потока, угол атаки и угол дрейфа ПА.
+\noindent где $B \in \mathspace{R}^{n \times (m+p+q)}$ -- матрица геометрии ДРК, а $K(v, \alpha, \beta) \in \mathspace{R}^{n \times (m+p+q)}$ -- матрица  коэффициентов влияния набегающего потока, $v, \alpha, \beta$ -- соответственно, скорость набегающего потока, угол атаки и угол дрейфа ПА.
 
 Все элементы в правой части выражения разумно разделить на три группы следующим образом:
 \begin{equation*}
@@ -428,9 +428,9 @@
     \vect{u^*} = (1-\epsilon)\left[(1-\epsilon)(BK(v))^{-1}Q_{\nu}BK(v) + \epsilon Q_u\right](BK(v))^TQ_{\nu} \vect{\nu}_c
 \end{equation*}
 
-Если целевое $\vect{\nu}_c$ не реализуемо в рамках заданных ограничений на ИМ $\mathspace{U}$, то при решении задачи используют стандартные методы решения квадратичных оптимизационных задач с ограничениями \cite{luenberger1984linear}, но общие методы зачастую редко реализуемы в рамках операционных систем реального времени в виду отсутствия строгих критериев завершения итерационного поиска оптимума.
+Если целевое $\vect{\nu}_c$ не реализуемо в рамках заданных ограничений на ИМ $\mathspace{U}$, то при решении задачи используют стандартные методы решения квадратичных оптимизационных задач с ограничениями \cite{luenberger1984linear}, но общие методы зачастую редко реализуемы в рамках операционных систем реального времени ввиду отсутствия строгих критериев завершения итерационного поиска оптимума.
 
-В статьях \cite{burken2001two, lu1996constrained} показано что в случае ограничений вида \ref{eq:bounds} глобально-сходящееся решение может быть найдено достаточно просто.
+В статьях \cite{burken2001two, lu1996constrained} показано, что в случае ограничений вида \ref{eq:bounds} глобально-сходящееся решение может быть найдено достаточно просто.
 
 \begin{equation}
     \label{eq:bounds}
@@ -474,7 +474,7 @@
 
 % Важно отметить что в реальных приложениях достаточно часто встречается ситуация когда матрица $B$ за счёт особенностей реализации ДРК может быть не полно ранговой, что значит невозможность формирования обратной матрицы, для этого используют модификаци
 
-Общая структурная блок схема работы алгоритма представлена на рисунке \ref{fig:method_algorithm}.
+Общая структурная блок-схема работы алгоритма представлена на рисунке \ref{fig:method_algorithm}.
 
 % \section{Реализация метода адаптивного управления ДРК}
 % Предложенный алгорим был реализован в среде Matlab.
@@ -496,7 +496,7 @@
 ``ММТ-300'' -- автономный необитаемый подводный аппарат, который спроектирован и разработан в Институте проблем морских технологий ДВО РАН.
 Он предназначен для проведения подводных работ на глубинах до 300 метров.
 
-АНПА оснащен четырьмя симметрично расположеными относительно продольной оси ПА маршевыми движителями. 
+АНПА оснащен четырьмя симметрично расположенными относительно продольной оси ПА маршевыми движителями. 
 Они установлены в корме аппарата с углом наклона относительно продольной оси ПА $\delta$.
 Для возможности управления при малых скоростях (в диапазоне скоростей 0 - 1.0 м/с) он дополнительно оборудован двумя подруливающими движителями в носовой части аппарата -- одним вертикальным и одним горизонтальным.
 
@@ -563,7 +563,7 @@
 
 Пусть управление ДРК ПА задано вектором $\vect{u} = [u_{sd},u_{su},u_{sl},u_{sr}, u_{tv},u_{th}]^T$, где переменные $u_{sd},u_{su},u_{sl},u_{sr}$ определяют упоры соответственно для нижнего, верхнего, левого и правого маршевого движителя, а переменные $u_{tv},u_{th}$ определяют упоры соответственно для вертикального и горизонтального подруливающего движителя.
 
-Пусть управление движением ПА, в свою очередь, задано вектором $\vect{v} = [f_x,f_y,f_z,m_y,m_z]^T$, где $f_x,f_y, f_z$ -- соответствено силы вдольно продольной, поперечной и нормальной оси ССК, а $m_y,m_z$ -- моменты вокруг поперечной (``по дифференту'') и вокруг нормальной (``по крену'') оси ССК. Ось управления по $m_z$ (``по крену'') отсутствует, т.к. ПА при такой конфигурации по ней не управляем.
+Пусть управление движением ПА, в свою очередь, задано вектором $\vect{v} = [f_x,f_y,f_z,m_y,m_z]^T$, где $f_x,f_y, f_z$ -- соответственно силы вдоль продольной, поперечной и нормальной оси ССК, а $m_y,m_z$ -- моменты вокруг поперечной (``по дифференту'') и вокруг нормальной (``по крену'') оси ССК. Ось управления по $m_z$ (``по крену'') отсутствует, т.к. ПА при такой конфигурации по ней не управляем.
 
 Матрица геометрии ДРК для конфигурации движителей представленной в таблице \ref{tab:mmt300_propulsion} в соответствии с выражением \ref{eq:propulsion_matrix} будет выглядеть следующим образом:
 \begin{equation}
@@ -656,7 +656,7 @@
 
 В качестве размера области допустимых значений вектора управления движением ПА $\vect{v_r}$ был взят объем выпуклой оболочки $\mathspace{A}$ ($n$-симплекса) построенной на семействе векторов $(\vect{\nu^b_1},\:\vect{\nu^b_2},\:,\ldots, \vect{\nu^b_k})$ которые получены следующим образом.
 
-Пусть $(\vect{u}^l_1, \vect{u}^l_2, \ldots, \vect{u}^l_k)$ -- множество векторов управления ДРК полученых полным перебором где $u^l_i$ принимают значения $\underline{u_i}$  либо $\overline{u_i}$.
+Пусть $(\vect{u}^l_1, \vect{u}^l_2, \ldots, \vect{u}^l_k)$ -- множество векторов управления ДРК полученных полным перебором где $u^l_i$ принимают значения $\underline{u_i}$ либо $\overline{u_i}$.
 Размер множества векторов $k$ будет определен как $2^m$ где $m$ -- количество ИМ в составе ДРК.
 
 Тогда $\vect{\nu^b_i}$ будет получен следующим выражением:
@@ -700,7 +700,7 @@
 
 Все расчёты приведены в относительные единицы по каждому из параметров исследования.
 В качестве базовой величины использовалось минимальное значение по каждому из параметров в отдельности.
-Остальные величины были расчитаны по следующей формуле:
+Остальные величины были рассчитаны по следующей формуле:
 
 \begin{equation*}
     P_r = \left( \frac{P_a}{P_a^{min}} - 1 \right) * 100\%
@@ -804,8 +804,8 @@
 \end{equation*}
 
 \subsubsection{Методология проведения моделирования}
-Было осуществено моделирование маневра по глубине, т.е. управление ДРК при продольном движении аппарата с одновременным созданием момента по каналу дифферента.
-Вектор целевого управления движением ПА $\vect{\nu_c}$ в BODY ССК выглядит следующим образом: $\vect{\nu_c} \equiv \vect{f}^b_c = [f_x, f_y, f_z, m_y, m_z]$, где $f_x,\: f_y,\: f_z$ -- соответственно, проекция целевой силы на продольную, поперечную и нормальную ось, а $m_y,\: m_z$ -- сответствующие проекции целевого момента.
+Было проведено моделирование маневра по глубине, т.е. управление ДРК при продольном движении аппарата с одновременным созданием момента по каналу дифферента.
+Вектор целевого управления движением ПА $\vect{\nu_c}$ в BODY ССК выглядит следующим образом: $\vect{\nu_c} \equiv \vect{f}^b_c = [f_x, f_y, f_z, m_y, m_z]$, где $f_x,\: f_y,\: f_z$ -- соответственно, проекция целевой силы на продольную, поперечную и нормальную ось, а $m_y,\: m_z$ -- соответствующие проекции целевого момента.
 В моделируемом случае целевая сила определяется следующим выражением:
 
 \begin{equation*}
@@ -818,7 +818,7 @@
         0
     \end{pmatrix}
 \end{equation*}
-\noindent где $c_x$ -- коэффицент лобового сопротивления движению ПА, $v$ -- продольная скорость движения ПА, $m_y^0$ -- фиксированный момент по дифференту сформированный СУ ПА.
+\noindent где $c_x$ -- коэффициент лобового сопротивления движению ПА, $v$ -- продольная скорость движения ПА, $m_y^0$ -- фиксированный момент по дифференту сформированный СУ ПА.
 
 Для моделирования были приняты следующие коэффициенты:
 \begin{itemize}
@@ -895,7 +895,7 @@
 Структура современных СУ АНПА разрабатываемых в ИПМТ ДВО РАН имеет модульный принцип построения \cite{борейко2019система, инзарцев2015реконфигурируемая}, т.е. представляет собой совокупность независимых функционально завершенных исполняемых файлов взаимодействие между которыми происходит заранее сформированными сообщениями.
 Взаимодействие между модулями обеспечивается системой передачи сообщений IPC, подробности работы которой описаны в статье \cite{pavin2016reconfigurable}.
 
-На рисунке \ref{fig:software_old} показано структурное описание текущей реализции СУ АНПА ДВО РАН в части управления движением.
+На рисунке \ref{fig:software_old} показано структурное описание текущей реализации СУ АНПА ДВО РАН в части управления движением.
 На рисунке изображены следующие модули СУ:
 \begin{itemize}
     \item ``Navigation'' -- модуль, комплексирующий навигационные данные от всех датчиков АНПА и публикующий самые лучшие данные в стандартном формате, где $\vect{p}^n_{b/n}$ -- положение АНПА в некоторой заданной инерциальной СК, $\vect{v}^n_{b/n}$ -- скорость АНПА в этой СК, а $\vect{v}^b_{b}$ -- скорость движения АНПА в ССК.
@@ -914,7 +914,7 @@
 В рамках исследования была предложена новая структура СУ АНПА изображённая на рисунке \ref{fig:software_new}.
 Её особенность заключается в том что добавляется новый модуль ``Propulsion'' задачей которого является адаптивное распределение управляющего воздействия на базе знания модели исполнительных механизмов.
 Программный модуль потребляет обобщенный вектор сил и моментов $\vect{f_b^b}$, который был сформирован модулем ``Motion''.
-Модуль поставляет вектор команд управления отдельными исполнтельными элементами на вход соответствующих драйверов.
+Модуль поставляет вектор команд управления отдельными исполнительными элементами на вход соответствующих драйверов.
 Так же исходящим параметром модуля является скорость набегающего потока, т.е. скорость АНПА в ССК.
 При этом от модуля навигации он потребляет тот же вектор скорости, но в скомплексированном виде.
 Общая структурная схема модуля ``Propulsion'' представлена на рисунке \ref{fig:propulsion-diagram}.
@@ -938,9 +938,9 @@
 Предложен новый алгоритм управления ДРК подводного аппарата, который учитывает особенности работы ИМ ДРК в набегающем потоке и способен адаптивно перераспределять управляющие воздействия при вариациях скорости.
 При этом поставщиком данных о скорости набегающего потока может быть сам ДРК ПА путем анализа параметров работы маршевых движителей по закономерностям которые были получены в главе \ref{ch:Velocity}.
 
-Показано что предложеное решение метода управления ДРК обеспечивает более высокую скорость работы по сравнению со стандартными подходами к решению задачи управления ДРК через формирование линейной и квадратичной оптимальной задачи при сопосповимой области допустимых значений.
+Показано, что предложенное решение метода управления ДРК обеспечивает более высокую скорость работы по сравнению со стандартными подходами к решению задачи управления ДРК через формирование линейной и квадратичной оптимальной задачи при сопоставимой области допустимых значений.
 
-Показано что предлагаемый алгоритм адаптивного управления ДРК позволяет плавно выключать подруливающий движитель из управления движением ПА.
+Показано, что предлагаемый алгоритм адаптивного управления ДРК позволяет плавно выключать подруливающий движитель из управления движением ПА.
 По сравнению с используемым в АНПА ``ММТ-300'', предлагаемый метод позволяет обеспечивать более широкий диапазон управления и позволяет удерживать заданный момент при более высоких значениях целевой скорости.
 
 Показан механизм модификации модульной СУ АНПА ``ММТ-300'' для прикладной реализации алгоритма адаптивного управления ДРК с идентификацией набегающего потока по параметрам работы маршевых движителей.
