--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -72,7 +72,7 @@
 
 Экспериментальная проверка обоих подходов была проведена в работе \cite{whitcomb1999development}.
 
-Кроме того, в работе \cite{blanke2000dynamic} рассматривается трехэтапная модель винта, которая уже учитывает упрощённую модель ПА для более точного расчета скорости потока набегающего на грибной винт:
+Кроме того, в работе \cite{blanke2000dynamic} рассматривается трех этапная модель винта, которая уже учитывает упрощённую модель ПА для более точного расчета скорости потока набегающего на грибной винт:
 \begin{gather*}
     J_p\dot{n} + K_{n|n|}n|n| = \tau - Q \\
     m_f \dot{u_p} + d_{f0}u_p + d_f|u_p|(u_p - u_a) = T \\
@@ -88,7 +88,7 @@
 \subsection{Математическая модель гребного винта}
 
 Для гребного винта с фиксированным шагом, момент на валу $Q$ и сила (упор) вырабатываемая винтом $T$ зависит от продольной скорости движения аппарата $u$, скорости потока воды $u_a$, а так же скорости вращения винта $n$.
-В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} на работу движителя также влияют следующие параметры настационарности потока, формируемого гребным винтом:
+В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} на работу движителя также влияют следующие параметры нестационарности потока, формируемого гребным винтом:
 \begin{itemize}
     \item всасывание воздуха;
     \item кавитация;
@@ -241,21 +241,21 @@
 \noindent где $K_{tp}$ и $K_{ti}$, соответственно, пропорциональный и интегральный коэффициенты ПИ-регулятора.
 
 \section{Математическая модель подруливающих движителей ПА}
-Описание работы подруливающего движителя описывается существенно более сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата \cite{tolstonogov2017auv}.
+Описание работы подруливающего движителя описывается существенно сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата \cite{tolstonogov2017auv}.
 Научные труды посвященные гидродинамическим особенностям работы подруливающих движителей в первую очередь были проведены в рамках исследования эффективности движительно-рулевых комплексов судов \cite{chislett1966influence, english1964design, brix1973lateral}.
 Кроме того, большое исследование данного вопроса было проведено в докторской диссертации \cite{nienhuis1992analysis}.
-Общий вывод представленных работ и результатов натурных экспериментов заключается в том, что работа подруливающих движителей тунельного типа становится неэффективной на скоростях движения судов свыше 1–1,5 м/с \cite{english63}.
+Общий вывод представленных работ и результатов натурных экспериментов заключается в том, что работа подруливающих движителей туннельного типа становится неэффективной на скоростях движения судов свыше 1–1,5 м/с \cite{english63}.
 
 Первое исследование эффективности подруливающих движителей для АНПА была было проведено в работе \cite{saunders2002effect}. 
 В рамках этой работы представлен полноценный анализ эффективности подруливающего движителя аппарата ``C-SCOUT'' для большого диапазона скоростей его движения и углов атаки в диапазоне $\pm90^{\circ}$.
 
 Большое исследование эффективности работы подруливающих движителей АНПА с формированием обобщенной модели влияния скорости и направления набегающего потока на аппарат было проведено в рамках работы \cite{palmer2008modelling} а так же в последующей докторской работе этого же автора \cite{palmer2009analysis}.
 
-В упомянутых научных работах было показано что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устройства, а скорее с взаимодействием пропульсивной струи, которую создает подруливающий движитель, с набегающим на ПА потоком.
+В упомянутых научных работах было показано, что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устройства, а скорее с взаимодействием пропульсивной струи, которую создает подруливающий движитель, с набегающим на ПА потоком.
 
 Работа подруливающего движителя ПА при отсутствии поперечного потока полностью эквивалентна модели маршевого движителя, т.е. на аппарат действует определенная сила (упор) приложенная к точке крепления движителя за счет формирования пропульсивной струи ПА.
 Но в случае, когда ПА движется с продольной скоростью $u$, то пропульсивная струя формируемая подруливающим движителем формирует гидродинамическую тень (на рисунке закрашена серым цветом) на корпусе ПА в области за подруливающей шахтой (рисунок \ref{fig:modelling-tunnel}).
-За счет этого формируется разность давлений между различными областями ПА, которая, в свою очередь, формирует силу $T_S$ обратную по направлению силе создаваемой подруливающим движителем $T_T$.
+За счет этого формируется разность давлений между различными областями ПА, которая, в свою очередь, формирует силу $T_S$ обратную по направлению к силе создаваемой подруливающим движителем $T_T$.
 
 \begin{figure}[ht]
     \centering
@@ -285,7 +285,7 @@
     \label{fig:tunnel_effectivness}
 \end{figure}
 
-По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее.
+По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно, что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее.
 
 Экспериментальные исследования эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
 
@@ -314,11 +314,11 @@
 \begin{equation*}
 	M = T_T x_T + (T_T-T_S)x_S
 \end{equation*}
-\noindent где $x_T$ -- расстояние между ЦМ подводного аппарата и точкой приложения силы $T_T$, а в свою очередь $x_S$ - это расстояние между ЦМ ПА и точкой приложениия силы $T_S$, которая определяется следующим образом:
+\noindent где $x_T$ -- расстояние между ЦМ подводного аппарата и точкой приложения силы $T_T$, а в свою очередь $x_S$ - это расстояние между ЦМ ПА и точкой приложения силы $T_S$, которая определяется следующим образом:
 \begin{equation*}
 	x_S = x_T - kD\frac{u}{u_j}
 \end{equation*}
-\noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- коэффициент, зависящий от коструктивных особенностей подруливающей шахты и формы АНПА.
+\noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- коэффициент, зависящий от конструктивных особенностей подруливающей шахты и формы АНПА.
 
 Кроме скорости набегающего потока на эффективность подруливающих двигателей оказывают влияние углы атаки и дрейфа ПА.
 В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого горизонтальным подруливающим движителем от скорости набегающего потока и угла дрейфа.
@@ -338,7 +338,7 @@
     \item $C_{LSP}$ -- подъемный коэффициент РУ;
 \end{itemize}
 
-В свою очередь, подъемный коэффициент РУ $C_{LSP}$ быть расcчитан следующим образом:
+В свою очередь, подъемный коэффициент РУ $C_{LSP}$ быть рассчитан следующим образом:
 \begin{equation*}
     C_{LSP} = a_{sp}\alpha \left( \frac{2 \pi}{1 + (2/AR)} \right)
 \end{equation*}
@@ -386,7 +386,7 @@
 Для численного анализа поведения маршевого движителя в набегающем потоке была разработана его блочная модель (рисунок \ref{fig:modelling-thruster}), где модель привода движителя описывается в соответствии с системой дифференциальных уравнений \ref{eq:motor_model}, а модель гребного винта - в соответствии с уравнениями \ref{eq:propeler_model}.
 Параметры моделирования представлены в таблице \ref{tab:modelling-thruster}.
 В рамках моделирования было реализовано управление электроприводом движителя по моменту в соответствии с выражением \ref{eq:thruster_control_torque}.
-Для расчёта кривых действий ГВ была использована прикладная программа PSOP \cite{инзарцев2018подводные}, которая расчитывает параметры ГВ основываясь на данных регрессионной
+Для расчёта кривых действий ГВ была использована прикладная программа PSOP \cite{инзарцев2018подводные}, которая рассчитывает параметры ГВ основываясь на данных регрессионной
 базы серийных испытаний гребных винтов Дайдола-Джонсона \cite{daidola1992propeller}.
 
 \begin{figure}[ht]
@@ -423,7 +423,7 @@
     \end{tabular}
 \end{table}
 
-В рамках реализованной модели движителя был проведен анализ влияния соосного набегающего потока на упор создаваемый маршевым движителем при различных кодах управления (рисунок \ref{fig:modelling-thruster-velocity}), кроме того была явным образом расчитана зависимость упора создаваемого движителем от скорости набегающего потока для фиксированых значений кода управления (рисунок \ref{fig:modelling-thruster-code}).
+В рамках реализованной модели движителя был проведен анализ влияния соосного набегающего потока на упор создаваемый маршевым движителем при различных кодах управления (рисунок \ref{fig:modelling-thruster-velocity}), кроме того была явным образом рассчитана зависимость упора создаваемого движителем от скорости набегающего потока для фиксированных значений кода управления (рисунок \ref{fig:modelling-thruster-code}).
 Видно, что создаваемый упор существенно зависит от набегающего потока и при скорости движения 2 м/с падает почти в 2 раза.
 
 \begin{figure}[ht]
@@ -448,10 +448,10 @@
 \begin{equation*}
     T = T_T - T_S
 \end{equation*}
-\noindent где $T_T$ -- упор сформированный работой подруливающего движителя, а $T_S$ представляет собой сила действующую на ПА из-за формирорования пропульсивной струёй подруливающего движителя гидродинамической тени на корпусе ПА (выражение \ref{eq:thrust_tunnel}).
+\noindent где $T_T$ -- упор сформированный работой подруливающего движителя, а $T_S$ представляет собой сила действующую на ПА из-за формирования пропульсивной струёй подруливающего движителя гидродинамической тени на корпусе ПА (выражение \ref{eq:thrust_tunnel}).
 
-В рамках моделирования коэффицент $c$ был принят с величиной 5.0 \cite{palmer2009experimental}.
-В рамках реализованной модели подруливающего движителя было проведено численное моделирование эффективного значение упора создаваемого подруливащим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity}).
+В рамках моделирования коэффициент $c$ был принят с величиной 5.0 \cite{palmer2009experimental}.
+В рамках реализованной модели подруливающего движителя было проведено численное моделирование эффективного значение упора создаваемого подруливающим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity}).
 
 \begin{figure}[ht]
     \centering
@@ -464,17 +464,6 @@
 В соответствии с моделью руля управления (уравнение \ref{eq:modelling-rudder}) была составлена численная модель при этом коэффициент производной гидродинамической характеристики руля был взят за $0.0025$.
 Результаты численного моделирования момента создаваемого рулем управления при различных скоростях набегающего потока представлены на рисунке \ref{fig:modelling-rudder-velocity}.
 
-% \begin{notequestion}
-%     Мне кажется коэффициент производной гидродинамической характеристики может быть абсолютно любой. Это качественно не повлияет на характер зависимости.
-%     Для с - добавил ссылку.
-% \end{notequestion}
-
-% \begin{notequestion}
-%     Скорость пропульсивной струи определяется по уравнению \ref{eq:jetflow_speed}.
-%     Не очень понял про выдуманность этого уравнения.
-%     Нет ссылки на источник?
-% \end{notequestion}
-
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{modelling/Моделирование - рули скорость.png}
@@ -484,7 +473,7 @@
 
 \section{Выводы по главе 2}
 Во второй главе приведены математические модели исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК ПА учитывающие особенности их работы в набегающем потоке.
-Показано что эффективность работы ИМ существенным образом зависят от скорости набегающего потока. 
+Показано, что эффективность работы ИМ существенным образом зависят от скорости набегающего потока. 
 Приведены результаты численного моделирования работы ИМ.
 
 Упор маршевых движителей линейно зависит от скорости набегающего потока и для представленных в разделе параметров ИМ падает в два раза на скорости набегающего потока 2 м/с относительно упора формируемого в ходе швартовных испытаний.
