--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -33,7 +33,7 @@
 
 Удобно раскладывать матрицу $B_u$ таким образом, чтобы матрица $B_{\nu}$ была квадратной ($n=m$). При этом матрица будет полноранговой, а решение уравнения для первой части системы \ref{eq:dynamic_statespace_new} единственным. В качестве вектора управления удобно использовать обобщенный вектор сил и моментов, действующих на объект управления в связанной с ним системе координат (ССК). При $n=6$ его можно определить как $\vect{\nu} = [f_x,f_y,f_z,m_x,m_y,m_z]^T$ где $f_x,f_y,f_z$ -- проекции сил затребованных системой управления движением на продольную поперечную и нормальную оси связанной с аппаратом системы координат, а $m_x,m_y,m_z$ -- соответствующие затребованные проекции моментов. 
 
-Тем не менее, матрица $B(\vect{x})$ в случае избыточного ДРК остается недоопределённой. Фактически это ведет к тому что для вектора $\nu_c$, который был затребован системой управления, может быть неопределённое множество решений уравнения \ref{eq:dynamic_statespace_new}.
+Тем не менее матрица $B(\vect{x})$ в случае избыточного ДРК остается недоопределённой. Фактически это ведет к тому что для вектора $\nu_c$, который был затребован системой управления, может быть неопределённое множество решений уравнения \ref{eq:dynamic_statespace_new}.
 
 Задача поиска оптимального вектора управления движением может быть поставлена в рамках обоих вариантов описания системы представленных выше.
 Пусть задача оптимального управления поставлена в рамках квадратичной оптимизации, тогда для описания \ref{eq:dynamic_statespace} задача будет сформулирована следующим образом \cite{10.1016/j.automatica.2004.09.007}
@@ -124,7 +124,7 @@
 \begin{equation*}
     \alpha_1 = \min \left\{ \frac{l_1 \cdot u_j^{lim}}{u_j^{ub}} \right\}_{j=1}^k
 \end{equation*}
-\noindent где $u_j^{lim}$ представляет собой максимальное значение команды управления $j$-го исполнительного механизма. Для простоты, считаем что характеристика  исполнительного механизма симметрична, т.е. $u_j^{lim} = u_j^+ = u_j^-$
+\noindent где $u_j^{lim}$ представляет собой максимальное значение команды управления $j$-го исполнительного механизма. Для простоты, считаем что характеристика исполнительного механизма симметрична, т.е. $u_j^{lim} = u_j^+ = u_j^-$
 
 Для осей с меньшим приоритетом, т.е. для $i>1$ в наборе $\nu_c^{prio}$, расчёт сжимающего коэффициента будет записан следующим образом:
 \begin{equation*}
@@ -136,7 +136,7 @@
 \end{equation*}
 
 \subsubsection{Квадратичная оптимизация}
-Выбор функционала   второго порядка в уравнении описывающем управляемую систему \ref{eq:dynamic_statespace_new} можно легко привести к записи задачи квадратичной оптимизации в каноничной форме (метрика $L_2$ или евклидова норма):
+Выбором функционала второго порядка в уравнении описывающем управляемую систему \ref{eq:dynamic_statespace_new} можно легко привести к записи задачи квадратичной оптимизации в каноничной форме (метрика $L_2$ или евклидова норма):
 \begin{equation*}
     \min_{u,s} \frac{1}{2}\left(\vect{u^T}, \vect{s^T}\right) H 
     \begin{pmatrix}
@@ -183,7 +183,7 @@
 \subsubsection{Динамическое управление ДРК на базе прогнозирующих моделей}
 Управление с прогнозирующими моделями (Model predictive control) представляет собой один из самых современных подходов в области теории управления. 
 Изначально он применялся при управлении производственными процессами, где большие постоянные времени переходных процессов позволяли его применять, т.к. он крайне ресурсоёмок.
-Но с ростом вычислительных мощностей компьютеров и встраиваемых систем появилась возможность применения данного подхода для мобильных объектов управления. В рамках этого подхода сформировался отдельных подкласс под названием «Model predictive control allocation» \cite{10.1016/j.ifacol.2019.08.065, 10.1016/j.ifacol.2015.10.048, 10.1007/s11768-019-7231-9} предназначенный для решения задачи управления ДРК на основе прогнозирующих моделей.
+Но с ростом вычислительных мощностей компьютеров и встраиваемых систем появилась возможность применения данного подхода для мобильных объектов управления. В рамках этого подхода сформировался отдельный подкласс под названием «Model predictive control allocation» \cite{10.1016/j.ifacol.2019.08.065, 10.1016/j.ifacol.2015.10.048, 10.1007/s11768-019-7231-9} предназначенный для решения задачи управления ДРК на основе прогнозирующих моделей.
 
 Задача управления ДРК в данном подходе записывается следующим образом \cite{10.1109/icca.2011.6137940}. Пусть исполнительные механизмы ДРК представлены в формулировках метода пространства состояний следующим образом:
 
@@ -213,15 +213,13 @@
     \widehat{\vect{u}} = \left[ \widehat{\vect{u}}(k+1|k), \dots, \widehat{\vect{u}}(k+N|k)) \right] \\
     \end{matrix*}
 \end{equation*}
-
-где $N$ представляет собой размер горизонта предсказания, а $k$  текущий временной отрезок.
+\noindent где $N$ представляет собой размер горизонта предсказания, а $k$ текущий временной отрезок.
 Для заданного горизонта предсказания множество решений вектора управления ИМ ДРК $u_{cmd}^*$ может быть найдено путем минимизации квадратичного функционала, который записан следующим образом:
 \begin{eqnarray*}
     J(\cdot) = \sum_{j=1}^N W(j) \left[ \widehat{\vect{\nu}}(k+j|k) - \vect{\nu^{*}}(k+j) \right]^2 + \notag \\ 
     + \sum_{j=1}^{N-1} \sum_{i=1}^{k}W_a(i)\left[ \vect{u}_{cmd,i}(k+j-1|k) \right]^2
 \end{eqnarray*}
-
-где $W{j}$ представляет собой матрицу весовых коэффициентов которая отражает значимость минимизации невязки с целевой командой управления $\vect{\nu}^*$ в момент времени $j$. В свою очередь весовой коэффициент $W_a(i)$ отражает стоимость использования $i$-го исполнительного механизма.
+\noindent где $W{j}$ представляет собой матрицу весовых коэффициентов которая отражает значимость минимизации невязки с целевой командой управления $\vect{\nu}^*$ в момент времени $j$. В свою очередь весовой коэффициент $W_a(i)$ отражает стоимость использования $i$-го исполнительного механизма.
 
 \subsection{Нелинейные системы исполнительных механизмов ДРК}
 
@@ -284,7 +282,7 @@
 В главе приведены различные подходы и методы решения задачи управления ДРК в зависимости от его типа.
 Кроме того, представлены программные пакеты, которые позволяют реализовать рассмотренные подходы в компьютерах и встраиваемых системах. 
 
-Описываемая задача представляется достаточно проработанной, но в тоже время существует большой пласт особенностей ИМ, которые до сих пор не учтены в представленных подходах:
+Описываемая задача представляется достаточно проработанной, но в то же время существует большой пласт особенностей ИМ, которые до сих пор не учтены в представленных подходах:
 \begin{itemize}
     \item при формировании моделей исполнительных механизмов явным образом не выражены параметры электроприводов. В работах не учитывается, что коэффициент полезного действия электромотора существенно зависит от скорости вращения вала привода;
     \item модель ИМ не учитывает сильную зависимость параметров исполнительных механизмов от скорости набегающего потока, хотя это важный параметр для работы всех исполнительных механизмов. Так например в работе \cite{palmer2008modelling} показано что из-за гидродинамических особенностей эффективность подруливающего движителя существенно падает с возрастанием скорости поперечного набегающего потока.
