--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -153,7 +153,7 @@
 \section{Экспериментальное исследование разработанного метода оценки скорости набегающего потока по данным запусков АНПА ``ММТ-3000''}
 В рамках исследования была проверена гипотеза о работоспособности метода оценки скорости набегающего потока по изменению параметров работы приводов маршевых двигателей.
 
-Для этого этого были проанализированы стендовые и маршевые испытания движителей маршевой группы АНПА ``ММТ-3000'', а так же проанализированы данные тестовых запусков подводного аппарата в рамках которых были идентифицированы ГДХ аппарата.
+Для этого были проанализированы стендовые и маршевые испытания движителей маршевой группы АНПА ``ММТ-3000'', а так же проанализированы данные тестовых запусков подводного аппарата в рамках которых были идентифицированы ГДХ аппарата.
 
 \begin{figure}[ht]
     \centering
@@ -179,7 +179,7 @@
 
 Маршевая секция подводного аппарата состоит из трех движителей.
 Два из них расположены симметрично под углом $\psi_l$ и $\psi_r$ к продольной оси аппарата в горизонтальной плоскости и небольшим углом в вертикальной плоскости, $\theta_l$ и $\theta_r$ соответственно.
-Последний, нижний, расположен расположен под углом $\theta_v$ к продольной оси аппарата в вертикальной плоскости.
+Последний, нижний, расположен под углом $\theta_v$ к продольной оси аппарата в вертикальной плоскости.
 Параметры углов наклона маршевых движителей представлены в таблице \ref{tab:mmt3000_propulsion_angles}.
 
 \subsection{Идентификация параметров работы привода движителя}
@@ -205,14 +205,14 @@
         \bottomrule
     \end{tabular}
 \end{table}
-На рисунке \ref{fig:motor_load_test} продемонстированы результаты проведения нагрузочных испытаний электродвигателя.
+На рисунке \ref{fig:motor_load_test} продемонстрированы результаты проведения нагрузочных испытаний электродвигателя.
 Хоть зависимость между моментом на валу электропривода и значением тока на обмотках мотора зависит явно линейно, коэффициент момента $K_m$ различен для разных значений кода управления.
 Это поведение хорошо описывается уравнением:
 \begin{equation*}
     K_m(k) = \frac{K_m^0}{k}
 \end{equation*}
 \noindent где $K_m^0$ -- некоторая постоянная, а $k$ -- код управления электроприводом.
-Результаты аппроксимации значения коэфициента момента от кода управления для $K_m^0 = 15.2$ приведены на рисунке \ref{fig:function_cm}.
+Результаты аппроксимации значения коэффициента момента от кода управления для $K_m^0 = 15.2$ приведены на рисунке \ref{fig:function_cm}.
 
 \begin{figure}[ht]
     \centering
@@ -224,7 +224,7 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - Cm от кода управления.png}
-    \caption{Зависимость коэфициента момента электропривода от кода управления $k$.}
+    \caption{Зависимость коэффициента момента электропривода от кода управления $k$.}
     \label{fig:function_cm}
 \end{figure}
 
@@ -265,7 +265,7 @@
 \subsection{Анализ результатов швартовных испытаний маршевых движителя}
 В рамках исследования был проведён анализ результатов швартовных испытаний движителя, в результате чего были получены значения усилия создаваемые движителем и потребляемый при этом ток в зависимости от задаваемого кода управления.
 
-Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение фазного напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение но с обратным направлением вращения вала мотора.
+Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение фазного напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение, но с обратным направлением вращения вала мотора.
 
 На рисунке \ref{fig:mmt3000_bollardpul} показана величина упора создаваемого движителем от значения кода управления публикуемого в систему управления движителем.
 \begin{figure}[ht]
@@ -343,7 +343,7 @@
 \end{figure}
 
 
-Соответствующие ему график изменения потребляемого тока и скорости вращения гребных винтов движителей маршевой группы представлены на рисунках \ref{fig:mmt3000_curent} и  \ref{fig:mmt3000_rotation}, соответсвенно.
+Соответствующие ему график изменения потребляемого тока и скорости вращения гребных винтов движителей маршевой группы представлены на рисунках \ref{fig:mmt3000_curent} и \ref{fig:mmt3000_rotation}, соответственно.
 
 \begin{figure}[ht]
     \centering
